fix: overflow fix

--- a/src/assets/styles/css/_generic/body.css
+++ b/src/assets/styles/css/_generic/body.css
@@ -4,10 +4,14 @@
 body {
     background-color: theme('colors.ash');
     color: theme('colors.light');
-    max-width: 100vw;
+    width: 100vw;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+main {
+    overflow: hidden;
 }
 
 html.lenis, html.lenis body {
